Attempt to fix skillcard size on mobile

--- a/styles/Shared.module.css
+++ b/styles/Shared.module.css
@@ -17,6 +17,7 @@
       max-width: 100px;
       max-height: 100px;
       width: 12%;
+      height: auto;
       aspect-ratio: 1/1;
       align-items: center;
       justify-content: center;
